BrushUp: POC for various things
New icons
Bold font
Dashboard tiles
Scroll Shadow
Outline selector

--- a/eclipse-scout-chart/src/style/colors.less
+++ b/eclipse-scout-chart/src/style/colors.less
@@ -12,6 +12,7 @@
 @palette-lila: #8F13FD;
 @palette-yellow: #F8E71D;
 
+// TODO CGU brushup inverted colors cleanup, or keep inverted for charts because it can look nice?
 @chart-axis-line-color: @palette-gray-5;
 @chart-axis-text-color: @palette-gray-7;
 @chart-axis-label-color: @palette-gray-6;
@@ -52,7 +53,7 @@
 @chart-data-color-6: @palette-blue-7;
 @chart-data-color: @palette-blue-5;
 @chart-data-text-color: @palette-white;
-@chart-legend-label-color: inherit;
+@chart-legend-label-color: @text-color;
 @chart-line-label-color: @chart-axis-text-color;
 @chart-line-label-background-color: @tile-default-background-color;
 @chart-alternative-line-label-background-color: @tile-alternative-background-color;
