--- a/eclipse-scout-core/src/desktop/outline/Outline.less
+++ b/eclipse-scout-core/src/desktop/outline/Outline.less
@@ -65,6 +65,10 @@
         }
       }
 
+      &[data-level="0"] {
+        text-transform: uppercase;
+      }
+
       & > .image-icon {
         margin-top: auto;
       }
