--- a/eclipse-scout-core/src/style/icons.less
+++ b/eclipse-scout-core/src/style/icons.less
@@ -16,6 +16,12 @@
 @icon-arial-long-arrow-up: '\2191';
 @icon-bullet: '\2022';
 
+/* new icons */
+@icon-keyboard-arrow-down: '\E917';
+@icon-keyboard-arrow-down-bold: '\E918';
+@icon-keyboard-arrow-up: '\E919';
+@icon-keyboard-arrow-up-bold: '\E91A';
+
 /* scoutIcons: custom icons */
 @icon-error: '\E001';
 @icon-info: '\E002';
