--- a/eclipse-scout-core/src/table/TableHeader.less
+++ b/eclipse-scout-core/src/table/TableHeader.less
@@ -177,11 +177,13 @@
   }
 
   &.sort-desc > .right::after {
-    content: @icon-arial-long-arrow-down;
+    .font-bsiIconsNew(); // TODO CGU brushup remove
+    content: @icon-keyboard-arrow-down;
   }
 
   &.sort-asc > .right::after {
-    content: @icon-arial-long-arrow-up;
+    .font-bsiIconsNew(); // TODO CGU brushup remove
+    content: @icon-keyboard-arrow-up-bold;
   }
 }
 
