--- a/eclipse-scout-core/src/tile/TileOverview.less
+++ b/eclipse-scout-core/src/tile/TileOverview.less
@@ -33,4 +33,5 @@
 .tile-overview-title {
   font-size: @font-size-extra-large;
   padding-bottom: 30px;
+  display: none; // TODO CGU brushup remove title completely
 }
