--- a/eclipse-scout-core/src/tree/Tree.less
+++ b/eclipse-scout-core/src/tree/Tree.less
@@ -133,6 +133,7 @@
 
     &.font-icon {
       padding-right: 10px;
+      font-size: 16px;
       /* Necessary to align with the text, depends on the used font size */
       line-height: @tree-node-font-icon-line-height;
     }
