--- a/eclipse-scout-core/src/desktop/viewbutton/ViewButtonBox.less
+++ b/eclipse-scout-core/src/desktop/viewbutton/ViewButtonBox.less
@@ -17,4 +17,5 @@
   position: relative; /* if covered by glass pane */
   padding: @view-button-box-padding-top @view-button-box-padding-right @view-button-box-padding-bottom @view-button-box-padding-left;
   background-color: @view-button-box-background-color;
+  // TODO CGU brushup fix style when navigation is hidden
 }
