--- a/eclipse-scout-core/src/tile/fields/button/TileButton.less
+++ b/eclipse-scout-core/src/tile/fields/button/TileButton.less
@@ -48,6 +48,7 @@
 
     & > .label {
       font-size: 16px;
+      font-weight: bold;
       max-height: 66px;
       #scout.overflow-ellipsis();
     }
