BrushUp: size reduce

--- a/eclipse-scout-core/src/desktop/DesktopLogo.less
+++ b/eclipse-scout-core/src/desktop/DesktopLogo.less
@@ -13,7 +13,8 @@
   right: 0;
   top: 0;
   margin-top: 8px;
-  margin-right: @bench-padding-x;
+  margin-left: 18px;
+  margin-right: 18px;
   width: 33px;
   height: 33px;
   background-size: contain;
