--- a/eclipse-scout-core/src/table/TableHeader.less
+++ b/eclipse-scout-core/src/table/TableHeader.less
@@ -46,6 +46,8 @@
   position: relative;
   display: inline-block;
   padding: @table-header-padding-y @table-header-padding-right @table-header-padding-y @table-header-padding-left;
+  font-weight: 600;
+  font-size: 12px;
   #scout.overflow-ellipsis-nowrap();
   /* Vertical align is necessary for 2 things: */
   /* 1. Alignment in case of multiline headers. */
