--- a/eclipse-scout-core/src/desktop/toolbox/DesktopToolBox.less
+++ b/eclipse-scout-core/src/desktop/toolbox/DesktopToolBox.less
@@ -12,7 +12,7 @@
   position: absolute;
   top: 0;
   white-space: nowrap;
-  padding-right: 20px;
+  padding-right: 18px; // TODO CGU brushup same as logo margin right?
 
   &.compact {
     padding-right: 15px;
@@ -24,8 +24,8 @@
   #scout.font-text-plus();
   border-left: 1px solid transparent;
   border-right: 1px solid transparent;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 18px;
+  margin-right: 18px;
   color: @desktop-tool-box-item-color;
 
   &.last {
